2009-08-14  Brian Kahne  <bkahne@freescale.com>

	* Modified how the temporary file-name routine is supplied.  This
	used to be done via a weakly linked function, but that doesn't
	work on Cygwin, so I've moded to using a functor with a function,
	SetMakeTempFilename, that sets the local static variable.

       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.46 (v0_8_46) on Linux (lc0100) on 8/12/2009 ==

       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.46 (v0_8_46) on Linux (lc0089) on 8/12/2009 ==

       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.46 (v0_8_46) on Linux (bkahne-ec1) on 8/12/2009 ==

2009-08-11  Brian Kahne  <bkahne@freescale.com>

	* Upgraded to Boehm GC 6.8.

       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.45 (v0_8_45) on Linux (bkahne-ec1) on 7/20/2009 ==

       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.45 (v0_8_45) on Linux (lc0100) on 7/20/2009 ==

       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.45 (v0_8_45) on Linux (lc0089) on 7/20/2009 ==

2009-07-20  Brian Kahne  <bkahne@freescale.com>

	* Added --enable-frontend and --enable-runtime configure options
	to allow the user to turn off various aspects of compiling Plasma.

2009-07-14  Brian Kahne  <bkahne@freescale.com>

	* Upgraded to libtool 2.2.6a and autoconf 2.63.

       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.43 (v0_8_43) on Linux (ld2059) on 1/30/2009 ==

       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.43 (v0_8_43) on Linux (ld2058) on 1/30/2009 ==

       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.43 (v0_8_43) on Linux (ld2058) on 1/30/2009 ==

2009-01-30  Brian Kahne  <bkahne@freescale.com>

	* Got make distcheck to work.
	
	* Added checking code to configure.ac to modify tar arguments to
	avoid tarfile corruption due to large UIDs.

       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.42 (v0_8_42) on Linux (ld2058) on 1/15/2009 ==
