@@ -1,0 +1,29 @@
+Define statement:  ( foo  = Bar ) {
+    action = {
+        for (  const int i = 0 ; i != 10 ; ++ i ) {
+            10 ;
+        }
+        try {
+            1 ;
+            2 ;
+            3 ;
+        } catch (  Exception e ) {
+            1 ;
+            2 ;
+        }
+    } ;
+}
+Key:  action
+Value:  {
+    for (  const int i = 0 ; i != 10 ; ++ i ) {
+        10 ;
+    }
+    try {
+        1 ;
+        2 ;
+        3 ;
+    } catch (  Exception e ) {
+        1 ;
+        2 ;
+    }
+}
